Implement experimental UDPipe2 support